# plural-kitty

./: .gitignore  Cargo.toml  README.md  TODO.md  default.nix  docker-compose.yaml  flake.nix  module.nix  shell.nix  sqlx-data.json  test-accounts
.git_hooks/: post-commit
.sqlx/: query-08233538ba48d754f4b5d33ff0c33864d8abbd2984dc3f6455b2b52d8608ce28.json  query-0826db2c7d44296fa13f3255fd24736456cf5e95d35503cba0d63e62f132419e.json  query-1ab29b41b8b14a2862d1f118d376d07c3b6985d2463a8e715edfbb19c1956622.json  query-1b59c6a1ef32455318272963618c40039449670bb0263d03953c533fae2d1e7b.json  query-1bdd395a6d865f9e449d82b27d7d33a35e7ae14835189193c7a81a6641460155.json  query-3231c77406a54e855b1e31b134ea18ff1f1182d7c73f862206aa4823e603b1f9.json  query-3316cb9019766dac5f14eb0cdbd032db0d4035388fe01e9787f8c3c4bdb683d6.json  query-3cccaeef4c4b5f3c211dd364d4713b3f4e2d9440fb4ed333ce668d0093d1b346.json  query-44c927a3911bf9591c1587fd52559c17af9e4c2949721c4d22c56e36ad0abbdd.json  query-5c0ad3e3aa68ec476656304c7eb529edaff2b27ab90050312e911be54293461e.json  query-5e148e331b7e5fadcc32de211e3605cccd92786a9866b492fd6de3cb0ae9549e.json  query-7499d51af8d5074170d51ada6b330fa0e31c5029bc80def4fc8f3684cb0a99ac.json  query-74b68882dad690848810b2405a7c5ce35ddfd0f928500e54ae8e04f566c6f9a5.json  query-77b822253ffd2bba96d79e768ff6cfc023b4f0dc6afed81c9901bbcd70d29e5b.json  query-92ad8ec9993acc0ecab12b0fc298beab65eee9398f49fb4fd2478317f3abd979.json  query-9653ad170dfe1df2fba4ceed907ad5662ee1a7e0226c602a7286bf357cb7c949.json  query-990fdbd71e40f3cebd597e597c99d2f7eb8b6cfb812d20768ce916d3a778aa76.json  query-acfb84b425c9837c6a002b5c4bbe342017e08471bdb4c1f39fccfe0b03a35792.json  query-b47a3281b2e9a170be27b5d2df5edcc3a229cf32368cc601d742b9af2dab7291.json  query-bd50efb4a53c4308d9d041faaf97cc5d09a0f96c0f98f52298dd32faf8ca0203.json  (+6 more)
migrations/: 20230612090348_inital_database.sql  (+1 more)
(+37 files in other folders)
