[package]
name = "plural-kitty"
version = "0.0.0"
edition = "2021"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["headers"] }
html-escape = "0.2.13"
html_parser = "0.7.0"
hyper = { version = "0.14.26", features = ["full"] }
once_cell = "1.18.0"
percent-encoding = "2.3.0"
rpassword = "7.2.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "offline"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dependencies.matrix-sdk]
git = "https://codeberg.org/Apothecary/matrix-rust-sdk.git"
branch = "plural-kitty-new"
features = ["markdown", "anyhow", "ruma-hyper"]
